fix overflow

--- a/FCv1/assets/style.css
+++ b/FCv1/assets/style.css
@@ -1,4 +1,6 @@
-body {
+body,
+html {
+  overflow-x: hidden;
   font-family: Gilroy;
 }
 
